--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <img src="5.png" style="width: 300px; border-radius: 10px;" alt="Gallery 5">
         <img src="IMG-20250703-WA0023.jpg" style="width: 300px; border-radius: 10px;" alt="Gallery 6">
         <img src="IMG-20250703-WA0015.jpg" style="width: 300px; border-radius: 10px;" alt="Gallery 7">
-        <img src="IMG-20250703-WA0020.jpg" style="width: 300px; border-radius: 10px;" alt="Gallery 8">
+        <img src="10.jpg" style="width: 300px; border-radius: 10px;" alt="Gallery 8">
        <img src="IMG-20250703-WA0024.jpg" style="width: 300px; border-radius: 10px;" alt="Gallery 9">
        <img src="IMG-20250703-WA0015.jpg" style="width: 300px; border-radius: 10px;" alt="Gallery 8">
        <img src="IMG-20250703-WA0018.jpg" style="width: 300px; border-radius: 10px;" alt="Gallery 8">
